--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "@emotion/styled": "^11.11.0",
     "next": "^14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-slick": "^0.30.1",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "dev": "next",
@@ -22,5 +24,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "file-loader": "^6.2.0"
   }
 }
